--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="proyecto cafeteria " />
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
-    <link rel="stylesheet" href="./pages/style.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
     <!-- fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
