--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="page">
       Probando...
       <header class="header"></header>
-      <main>
+      <main class="content">
         <section class="recipes"></section>
         <section class="reservation"></section>
       </main>
