--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <!-- fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,11 +23,176 @@
   </head>
   <body>
     <div class="page">
-      Probando...
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Logotipo de la Biblioteca Triple Peaks"
+            class="nav__logo"
+          />
+          <ul class="nav__links">
+            <li>
+              <a class="nav__link" href="#recipes">Recetas</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#reservation">Reservar una mesa</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#">Contactos</a>
+            </li>
+          </ul>
+        </nav>
+
+        <h1 class="header__title">
+          <span class="span-acent"> Café de especialidad </span><br />
+          en Triple Peaks
+        </h1>
+
+        <p class="header__description">
+          ¡Te damos la bienvenida a nuestra zona de estudio! Aqui tenemos café
+          <br />para darte energía y motivar tu cretividad.
+        </p>
+
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="Ilustración 'Dentro de la biblioteca'"
+          class="header__image"
+        />
+
+        <div class="header__footer">
+          <div class="horario">
+            <p class="header__paragraph">Horario: <br /></p>
+            <p class="header__paragraph">
+              Lunes a Viernes (de 10:00h a 19:00h)<br />
+            </p>
+            <p class="header__paragraph">
+              Sabados y Domingos (de 11:00h a 18:00h)
+            </p>
+          </div>
+          <div class="adress">
+            <p class="header__paragraph">
+              Avenida del exito 200, ciudad Triple Peaks
+            </p>
+          </div>
+        </div>
+      </header>
       <main class="content">
-        <section class="recipes"></section>
-        <section class="reservation"></section>
+        <section id="recipes" class="recipes">
+          <div class="recipes__title">
+            <h2>Recetas</h2>
+          </div>
+          <div class="recipes__subtitle">
+            Echa un vistaso a las recetas que hemos<br />
+            reunido para que elabores tus propios snaks.
+          </div>
+          <div class="recipes__videos">
+            <div class="video-item">
+              <div class="recipes__iframe">
+                <iframe
+                  class="recipes__iframe"
+                  width="480"
+                  height="273"
+                  src="https://www.youtube.com/embed/j6VlT_jUVPc?si=Fvi61lXrSClKxE-u"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+              </div>
+              <div class="video-caption">
+                <p>Receta en Aeropress</p>
+                <p>~5 min</p>
+              </div>
+            </div>
+            <div class="video-item">
+              <div class="recipes__iframe">
+                <iframe
+                  class="recipes__iframe"
+                  width="480"
+                  height="273"
+                  src="https://www.youtube.com/embed/st571DYYTR8?si=mlJ2MSw_wVRXeT5c"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+              </div>
+              <div class="video-caption">
+                <p>Receta en cafetera francesa</p>
+                <p>~15 min</p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section id="reservation" class="reservation">
+          <!-- formulario -->
+          <p class="reservation__title">Reservar una mesa</p>
+          <div class="fieldset">
+            <form
+              class="reservation__form form"
+              action="/procesar-formulario"
+              method="POST"
+            >
+              <label class="form__label" for="nombre">Nombre *</label>
+              <input
+                type="text"
+                class="form__input"
+                minlength="3"
+                maxlength="20"
+                required
+                placeholder="Nombre"
+                id="nombre"
+              />
+
+              <label class="form__label" for="personas"
+                >Numero de comensales *</label
+              >
+              <input
+                type="number"
+                class="form__input"
+                min="1"
+                max="8"
+                required
+                placeholder="1 a 18"
+                id="personas"
+              />
+
+              <label class="form__label" for="fechaDeNacimiento"
+                >Fecha y hora *</label
+              >
+              <input
+                type="datetime-local"
+                class="form__input"
+                required
+                id="fechaDeNacimiento"
+              />
+              <label class="form__label" for="correo"
+                >Tu Correo electrónico *</label
+              >
+              <input
+                type="email"
+                class="form__input"
+                required
+                placeholder="email@email.com"
+                id="correo"
+              />
+
+              <button type="submit" class="form__button form__button-submit">
+                Reservar una mesa
+              </button>
+
+              <div class="form__checkbox-input">
+                <input
+                  type="checkbox"
+                  id="terminos"
+                  class="form__checkbox-input"
+                  required
+                />
+                <label for="terminos">Acepto los términos de uso</label>
+              </div>
+            </form>
+          </div>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
