--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>cAFETERIA TRIPLETEN</title>
     <meta name="description" content="proyecto cafeteria " />
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -194,7 +193,39 @@
           </div>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__content">
+          <img
+            class="footer__logo"
+            src="./images/logo_coffeeshop_light.svg"
+            alt="footer-logo"
+          />
+          <div class="footer__social">
+            <p class="footer__social-heading">Redes sociales</p>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <img
+                  class="footer__social-icon"
+                  src="./images/facebook_white.svg"
+                  alt="fb-logo"
+                />
+                <div class="footer__social-link">Facebook</div>
+              </li>
+              <li class="footer__list-item">
+                <img
+                  class="footer__social-icon"
+                  src="./images/instagram_white.svg"
+                  alt="ig-logo"
+                />
+                <div class="footer__social-link">Instagram</div>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="copyright">
+          <p>©2025 Sebastian Medina</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
