--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
         </section>
       </main>
       <footer class="footer">
+        <div class="footer__circle"></div>
         <div class="footer__content">
           <img
             class="footer__logo"
@@ -222,8 +223,8 @@
             </ul>
           </div>
         </div>
-        <div class="copyright">
-          <p>©2025 Sebastian Medina</p>
+        <div>
+          <p class="copyright">©2025 Sebastian Medina</p>
         </div>
       </footer>
     </div>
