--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           </div>
         </div>
         <div>
-          <p class="copyright">©2025 Sebastian Medina</p>
+          <p class="footer__copyright">©2025 Sebastian Medina</p>
         </div>
       </footer>
     </div>
