--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
 
         <h1 class="header__title">
-          <span class="span-acent"> Café de especialidad </span><br />
+          <span class="header__span-acent"> Café de especialidad </span><br />
           en Triple Peaks
         </h1>
 
@@ -68,7 +68,7 @@
               Sabados y Domingos (de 11:00h a 18:00h)
             </p>
           </div>
-          <div class="adress">
+          <div class="header__adress">
             <p class="header__paragraph">
               Avenida del exito 200, ciudad Triple Peaks
             </p>
@@ -85,7 +85,7 @@
             reunido para que elabores tus propios snaks.
           </div>
           <div class="recipes__videos">
-            <div class="video-item">
+            <div class="recipes__video-item">
               <div class="recipes__iframe">
                 <iframe
                   class="recipes__iframe"
@@ -98,12 +98,12 @@
                   allowfullscreen
                 ></iframe>
               </div>
-              <div class="video-caption">
+              <div class="recipes__video-caption">
                 <p>Receta en Aeropress</p>
                 <p>~5 min</p>
               </div>
             </div>
-            <div class="video-item">
+            <div class="recipes__video-item">
               <div class="recipes__iframe">
                 <iframe
                   class="recipes__iframe"
@@ -116,7 +116,7 @@
                   allowfullscreen
                 ></iframe>
               </div>
-              <div class="video-caption">
+              <div class="recipes__video-caption">
                 <p>Receta en cafetera francesa</p>
                 <p>~15 min</p>
               </div>
@@ -126,9 +126,9 @@
         <section id="reservation" class="reservation">
           <!-- formulario -->
           <p class="reservation__title">Reservar una mesa</p>
-          <div class="fieldset">
+          <div class="form__fieldset">
             <form
-              class="reservation__form form"
+              class="form__reservation-form form"
               action="/procesar-formulario"
               method="POST"
             >
