--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
         <section id="reservation" class="reservation">
           <!-- formulario -->
           <p class="reservation__title">Reservar una mesa</p>
-          <div class="form__fieldset">
+          <div class="fieldset">
             <form
-              class="form__reservation-form form"
+              class="reservation-form form"
               action="/procesar-formulario"
               method="POST"
             >
