--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <p class="reservation__title">Reservar una mesa</p>
           <div class="fieldset">
             <form
-              class="reservation-form form"
+              class="reservation__form form"
               action="/procesar-formulario"
               method="POST"
             >
