--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <section id="reservation" class="reservation">
           <!-- formulario -->
           <p class="reservation__title">Reservar una mesa</p>
-          <div class="fieldset">
+          <div class="reservation__fieldset">
             <form
               class="reservation__form form"
               action="/procesar-formulario"
